--- a/servoo_purchase/i18n/fr.po
+++ b/servoo_purchase/i18n/fr.po
@@ -6,8 +6,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Odoo Server 15.0-20220616\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-11-10 07:59+0000\n"
-"PO-Revision-Date: 2022-11-10 07:59+0000\n"
+"POT-Creation-Date: 2023-06-09 00:12+0000\n"
+"PO-Revision-Date: 2023-06-09 00:12+0000\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -145,7 +145,7 @@ msgstr "Icône du type d'activité"
 #. module: servoo_purchase
 #: model_terms:ir.ui.view,arch_db:servoo_purchase.view_purchase_fleet_tank_form
 msgid "Add Fuel"
-msgstr ""
+msgstr "Ajouter le carburant"
 
 #. module: servoo_purchase
 #: model_terms:ir.ui.view,arch_db:servoo_purchase.report_purchase_order_document
@@ -252,6 +252,11 @@ msgstr "Espèce"
 #: model:ir.model.fields.selection,name:servoo_purchase.selection__purchase_order__payment_method__check
 msgid "Check"
 msgstr "Chèque"
+
+#. module: servoo_purchase
+#: model_terms:ir.ui.view,arch_db:servoo_purchase.view_purchase_fleet_tank_form
+msgid "Clean Tank"
+msgstr "Nettoyer la citerne"
 
 #. module: servoo_purchase
 #: model_terms:ir.ui.view,arch_db:servoo_purchase.view_purchase_order_inherit_form
