--- a/servoo_stevedoring/i18n/fr.po
+++ b/servoo_stevedoring/i18n/fr.po
@@ -121,6 +121,11 @@ msgid "Activity Type Icon"
 msgstr "Icône du type d'activité"
 
 #. module: servoo_stevedoring
+#: model:ir.model.fields,field_description:servoo_stevedoring.field_servoo_stevedoring_invoice_file__additional_invoice
+msgid "Additional Invoice"
+msgstr "Facture complémentaire"
+
+#. module: servoo_stevedoring
 #: model:ir.model.fields,field_description:servoo_stevedoring.field_servoo_stevedoring_formality__agent_id
 msgid "Agent"
 msgstr "Utilisateur"
@@ -390,6 +395,11 @@ msgid "Cubic Meters"
 msgstr ""
 
 #. module: servoo_stevedoring
+#: model:ir.model.fields,field_description:servoo_stevedoring.field_servoo_stevedoring_invoice_file__currency_id
+msgid "Currency"
+msgstr "Devise"
+
+#. module: servoo_stevedoring
 #: model:ir.actions.act_window,name:servoo_stevedoring.actions_customs_declaration
 #: model:ir.model,name:servoo_stevedoring.model_servoo_customs_declaration
 #: model:ir.model.fields,field_description:servoo_stevedoring.field_servoo_shipping_file__customs_declaration_ids
@@ -491,6 +501,7 @@ msgstr ""
 #. module: servoo_stevedoring
 #: model_terms:ir.ui.view,arch_db:servoo_stevedoring.wizard_shipping_outturn_report_form
 #: model_terms:ir.ui.view,arch_db:servoo_stevedoring.wizard_stevedoring_file_cancel_form
+#: model_terms:ir.ui.view,arch_db:servoo_stevedoring.wizard_stevedoring_invoice_file_form
 #: model_terms:ir.ui.view,arch_db:servoo_stevedoring.wizard_stevedoring_mate_receipt_form
 #: model_terms:ir.ui.view,arch_db:servoo_stevedoring.wizard_stevedoring_outturn_report_form
 msgid "Discard"
@@ -825,6 +836,11 @@ msgid "Invoice State"
 msgstr "Etat de facturation"
 
 #. module: servoo_stevedoring
+#: model_terms:ir.ui.view,arch_db:servoo_stevedoring.wizard_stevedoring_invoice_file_form
+msgid "Invoice stevedoring File"
+msgstr "Facturation dossier manutention"
+
+#. module: servoo_stevedoring
 #: model:ir.model.fields.selection,name:servoo_stevedoring.selection__servoo_stevedoring_file__invoice_state__invoiced
 #: model_terms:ir.ui.view,arch_db:servoo_stevedoring.view_servoo_stevedoring_file_form
 msgid "Invoiced"
@@ -835,6 +851,11 @@ msgstr "Facturé"
 #: model_terms:ir.ui.view,arch_db:servoo_stevedoring.view_servoo_stevedoring_file_form
 msgid "Invoices"
 msgstr "Factures"
+
+#. module: servoo_stevedoring
+#: model:ir.actions.act_window,name:servoo_stevedoring.action_wizard_stevedoring_invoice_file
+msgid "Invoicing stevedoring file"
+msgstr "Facturation dossiers manutention"
 
 #. module: servoo_stevedoring
 #: model:ir.model.fields,field_description:servoo_stevedoring.field_servoo_customs_declaration__message_is_follower
@@ -1799,6 +1820,7 @@ msgstr ""
 #. module: servoo_stevedoring
 #: model_terms:ir.ui.view,arch_db:servoo_stevedoring.view_servoo_stevedoring_file_form
 #: model_terms:ir.ui.view,arch_db:servoo_stevedoring.wizard_shipping_outturn_report_form
+#: model_terms:ir.ui.view,arch_db:servoo_stevedoring.wizard_stevedoring_invoice_file_form
 #: model_terms:ir.ui.view,arch_db:servoo_stevedoring.wizard_stevedoring_mate_receipt_form
 #: model_terms:ir.ui.view,arch_db:servoo_stevedoring.wizard_stevedoring_outturn_report_form
 msgid "Validate"
